syntax = "proto3";
option cc_generic_services = true;

message raft_node_info
{
    int32 node_id = 1;
    string addr = 2;
    int32 port = 3;
}